--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,16 @@ body {
 	font-size: 100%; /* Задаємо дефолтний розмір шрифтів */
 	}
 
-	/* * {text-align: center;} /* Звертаюся одночасно до всіх елементів */
+	* {text-align: center;} /* Звертаюся одночасно до всіх елементів */
 
-	h1 {
-		font-size: 20px;
-		color: gray;
-	}
+	h1 {font-size: 20px; color: gray;}
 
-	p {
-		color: gray;
-	}
+	h3 {font-size: 15px; color: gray;}
+
+	p {color: gray;}
 
 	@media only screen and (orientation: portrait) { /* Для девайсів з портретним дисплеєм */
-		h1, p, a {
+		h1, h3, p, a {
 		font-size: 200%; /* Збільшую розмір шрифтів вдвічі */
 	}
 }
