Update "style.css" - error correction

--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,11 @@ body {
 	font-size: 100%; /* Задаємо дефолтний розмір шрифтів */
 	}
 
-	* {text-align: center;} /* Звертаюся одночасно до всіх елементів */
+	h1, h3, p {text-align: center; color: gray;}
 
-	h1 {font-size: 20px; color: gray;}
+	h1 {font-size: 20px;}
 
-	h3 {font-size: 15px; color: gray;}
-
-	p {color: gray;}
+	h3 {font-size: 15px;}
 
 	@media only screen and (orientation: portrait) { /* Для девайсів з портретним дисплеєм */
 		h1, h3, p, a {
